looking good. debate, add hobbies or work at PCIL?

--- a/david_cummings_resume.tex
+++ b/david_cummings_resume.tex
@@ -19,7 +19,8 @@
 
 % no page numbers, besides others 
 \pagestyle{empty}
-
+\raggedright
+\usepackage[none]{hyphenat}
 % C++ Prettifier - thanks toofishes
 \newcommand{\CPP}
 {C\nolinebreak[4]\hspace{-.05em}\raisebox{.22ex}{\footnotesize\bf ++}}
@@ -38,40 +39,59 @@ consumer devices.
 
 \section*{\textbf{\textsc{Education}}} 
 \begin{tabular}{L!{\VRule}R}
-  May 2007&{\sl Bachelor of Science}, Electrical and Computer Engineering \\
-          &Johns Hopkins University  \\
+  May 2007&{\sl Bachelor of Science}  \hfill Electrical and Computer Engineering \\
+          &Johns Hopkins University  \hfill Baltimore, MD \\
 \end{tabular}
 
 \section*{\textbf{\textsc{Experience}}}
 \begin{tabular}{L!{\VRule}R}
-  Nov. 2011 - Present&Co-Founder, Sensorstar Labs \hfill Long Island City, NY \\
+  Nov. 2011 - Present&\textit{Co-Founder} \\ 
+                     &\textbf{Sensorstar Labs} \hfill Long Island City, NY \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Design and implementation a 64-channel LED control board with audio integration
+  \item Designed and implemented a 64-channel LED control board with audio integration
   \item Aided in the development of a novel background segmentation software using OpenCV
   \item On-going investigations at the intersection of new media and physical computing
   \end{compactitem} \\
 
-  Nov. 2010 - Sep. 2011&Consulting Senior Engineer, Sensorstar, Inc. \hfill Ellicott City, MD \\
-                       &\MPtrue 
+  June 2011 - Present&\textit{Founder, Chief Stuckee} \\
+                     &\textbf{Mechanart Industries, LLC} \hfill mechanart.com \\
+                     &\MPtrue 
   \begin{compactitem}
-  \item Systems Architecture design and team lead for a novel multi-mode sensor and communications devices
-  \item Circuit analysis and debug for a high-speed audio interleaving system
+  \item Developed a business card sized wireless field visualizer
+  \item Design and functional verification of a novel power tool accessory 
+  \item Mechanical design and prototyping of custom bicycle componentry
+  \end{compactitem} \\
+
+  Nov. 2010 - Sept. 2011&\textit{Consulting Senior Engineer}\\ 
+                        &\textbf{Sensorstar, Inc.} \hfill Ellicott City, MD \\
+                        &\MPtrue 
+  \begin{compactitem}
+  \item Systems Architecture design and team lead for a novel multi-mode wireless 
+    communications and data acquisition device
+  \item Circuit analysis and debug for a high-speed audio interleaving systems 
+    \item Android application testing and development
   \end{compactitem}\\
 
-  Oct. 2008 - Oct. 2010&Systems Architect \hfill Northrop Grumman ES; Linthicum, MD \\
+  Oct. 2008 - Oct. 2010&\textit{Systems Architect} \\
+                       &\textbf{Northrop Grumman ES} \hfill Linthicum, MD \\
+                       &\MPtrue 
+  \begin{compactitem}
+  \item Evaluation and selection of mainstream-market driven high performance coprocessors 
+    -- including requisite algorithm porting to VHDL and CUDA
+  \end{compactitem}
 
 
 \end{tabular}
 
 \section*{\textbf{\textsc{Computer Skills}}}
 \begin{tabular}{L!{\VRule}R}
-  {\sl Languages}& C, \CPP, Python, Bash, Ruby, {\LaTeX}, OpenCV, Arduino, Processing \\ 
+  {\sl Languages}& C, \CPP, Python, Bash, VHDL, CUDA, OpenCV, Ruby, {\LaTeX}, Arduino, Processing \\ 
      {\sl 3D CAD}& Pro/Engineer, Alibre Design, SketchUp \\
 {\sl PCB Design }& CadSoft Eagle \\ 
 {\sl VLSI Layout}& Berkeley Magic, Cadence Virtuoso \\ 
  {\sl Simulation}& Ansoft HFSS, Pro/Mechanica \\ 
- {\sl Operating Systems}& Ubuntu, OS X, Windows XP/7 \\
+ {\sl Operating Systems}& Linux (Ubuntu pref.), OS X, Windows XP/7 \\
 \end{tabular}
 
 \end{document}
