Working example. Looks OK. Information relevant. 1pg. Going to sleep for the night...

--- a/david_cummings_resume.tex
+++ b/david_cummings_resume.tex
@@ -40,7 +40,7 @@ consumer devices.
 \section*{\textbf{\textsc{Education}}} 
 \begin{tabular}{L!{\VRule}R}
   May 2007&{\sl Bachelor of Science}  \hfill Electrical and Computer Engineering \\
-          &Johns Hopkins University  \hfill Baltimore, MD \\
+          &\textbf{Johns Hopkins University}  \hfill Baltimore, MD \\
 \end{tabular}
 
 \section*{\textbf{\textsc{Experience}}}
@@ -70,7 +70,7 @@ consumer devices.
   \item Systems Architecture design and team lead for a novel multi-mode wireless 
     communications and data acquisition device
   \item Circuit analysis and debug for a high-speed audio interleaving systems 
-    \item Android application testing and development
+  \item Android application testing and development
   \end{compactitem}\\
 
   Oct. 2008 - Oct. 2010&\textit{Systems Architect} \\
@@ -84,14 +84,16 @@ consumer devices.
 
 \end{tabular}
 
-\section*{\textbf{\textsc{Computer Skills}}}
+\section*{\textbf{\textsc{Skills}}}
 \begin{tabular}{L!{\VRule}R}
-  {\sl Languages}& C, \CPP, Python, Bash, VHDL, CUDA, OpenCV, Ruby, {\LaTeX}, Arduino, Processing \\ 
-     {\sl 3D CAD}& Pro/Engineer, Alibre Design, SketchUp \\
+  {\sl Computer Languages}& C, \CPP, Python, Bash, VHDL, CUDA, OpenCV, Ruby, {\LaTeX}, Arduino, Processing \\ 
+     {\sl 3D CAD}& PTC Creo (form. Pro/ENGINEER), Alibre Design, SketchUp \\
 {\sl PCB Design }& CadSoft Eagle \\ 
-{\sl VLSI Layout}& Berkeley Magic, Cadence Virtuoso \\ 
  {\sl Simulation}& Ansoft HFSS, Pro/Mechanica \\ 
  {\sl Operating Systems}& Linux (Ubuntu pref.), OS X, Windows XP/7 \\
+   {\textsl Fabrication}& Welding (MIG, Stick, TIG(pref.)), Manual Machining \\ 
+  {\textsl Human Languages}& Native English, Conversational Spanish, Beginner Russian
 \end{tabular}
+
 
 \end{document}
