Changed to letter size in dvi2ps, fixed slanted bits on last two skills, and mucked with Header, may need to go back...

--- a/david_cummings_resume.tex
+++ b/david_cummings_resume.tex
@@ -27,7 +27,10 @@
 
 \begin{document}
 
-\centerline{\large\bf David Logan Cummings}
+%\centerline{\Large\bf David Logan Cummings}
+\hfill {\Large\bf{David Logan Cummings}} \\
+%\vspace{1em}
+\hfill +1-443-742-6564 \\
 www.wordtothebaker.com \hfill dave@mechanart.com
 \vspace{1em}
 \hrule height 1pt
@@ -91,8 +94,8 @@ consumer devices.
 {\sl PCB Design }& CadSoft Eagle \\ 
  {\sl Simulation}& Ansoft HFSS, Pro/Mechanica \\ 
  {\sl Operating Systems}& Linux (Ubuntu pref.), OS X, Windows XP/7 \\
-   {\textsl Fabrication}& Welding (MIG, Stick, TIG(pref.)), Manual Machining \\ 
-  {\textsl Human Languages}& Native English, Conversational Spanish, Beginner Russian
+   \textsl{Fabrication}& Welding (MIG, Stick, TIG(pref.)), Manual Machining \\ 
+  \textsl{Human Languages}& Native English, Conversational Spanish, Beginner Russian \\
 \end{tabular}
 
 
