good for now - wording changes, inter alia

--- a/david_cummings_resume.tex
+++ b/david_cummings_resume.tex
@@ -40,7 +40,7 @@ www.wordtothebaker.com \hfill dave@mechanart.com
 \section*{\textsc{\textbf{Objective}}} 
 \begin{adjustwidth}{2.5em}{0pt}
   A multi-disciplinary role integrating technology and design to 
-improve our interactions with our environment and each other.
+improve human interactions with our environment and each other.
 \end{adjustwidth}
 
 \section*{\textbf{\textsc{Education}}} 
@@ -55,8 +55,9 @@ improve our interactions with our environment and each other.
                      &\textbf{Sensorstar Labs} \hfill Long Island City, NY \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Designed and implemented a 64-channel LED control board with audio integration
-  \item Aided in the development of a novel background segmentation software using OpenCV
+  \item Design and implementation a 64-channel LED controller with audio sync 
+  \item Aided in the development and testing of a virtual world conferencing application utilizing 
+    OpenCV for background segmentation
   \item On-going investigations at the intersection of new media and physical computing
   \end{compactitem} \\
 
@@ -64,7 +65,7 @@ improve our interactions with our environment and each other.
                      &\textbf{Mechanart Industries, LLC} \hfill mechanart.com \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Developed a business card sized wireless field visualizer
+  \item Development of a business card sized wireless field visualizer
   \item Design and functional verification of a novel power tool accessory 
   \item Mechanical design and prototyping of custom bicycle componentry
   \end{compactitem} \\
@@ -73,9 +74,9 @@ improve our interactions with our environment and each other.
                         &\textbf{Sensorstar, Inc.} \hfill Ellicott City, MD \\
                         &\MPtrue 
   \begin{compactitem}
-  \item Systems Architecture design and team lead for a novel multi-mode wireless 
+  \item System architecture, power supply design, and team lead for a portable multi-mode wireless 
     communications and data acquisition device
-  \item Circuit analysis and debug for a high-speed audio interleaving systems 
+  \item Circuit analysis and debug for a high-speed audio interleaving system
   \item Android application testing and development
   \end{compactitem}\\
 
@@ -84,7 +85,7 @@ improve our interactions with our environment and each other.
                        &\MPtrue 
   \begin{compactitem}
   \item Evaluation and selection of mainstream-market driven high performance coprocessors 
-    -- including requisite algorithm porting to VHDL and CUDA
+    -- including algorithm work in C, VHDL, and CUDA
   \end{compactitem}
 
 
@@ -92,7 +93,7 @@ improve our interactions with our environment and each other.
 
 \section*{\textbf{\textsc{Skills}}}
 \begin{tabular}{L!{\VRule}R}
-  {\sl Computer Languages}& C, \CPP, Python, Bash, VHDL, CUDA, OpenCV, Ruby, {\LaTeX}, Arduino, Processing \\ 
+  {\sl Computer Languages}& C, \CPP, Python, Bash, OpenCV, Ruby, {\LaTeX}, \textit{inter alia} as needed \\ 
      {\sl 3D CAD}& PTC Creo (formerly Pro/ENGINEER), Alibre Design, SketchUp \\
 {\sl PCB Design }& CadSoft Eagle \\ 
  {\sl Simulation}& Ansoft HFSS, Pro/Mechanica \\ 
