--- a/david_cummings_resume.tex
+++ b/david_cummings_resume.tex
@@ -37,11 +37,11 @@ www.wordtothebaker.com \hfill dave@mechanart.com
 \vspace{1em}
 \hrule height 1pt
 
-\section*{\textsc{\textbf{Objective}}} 
-\begin{adjustwidth}{2.5em}{0pt}
-  A multi-disciplinary role integrating technology and design to 
-improve human interactions with our environment and each other.
-\end{adjustwidth}
+%\section*{\textsc{\textbf{Objective}}} 
+%\begin{adjustwidth}{2.5em}{0pt}
+%  A multi-disciplinary role integrating technology and design to 
+%  improve human interactions with our environment and each other.
+%\end{adjustwidth}
 
 \section*{\textbf{\textsc{Education}}} 
 \begin{tabular}{L!{\VRule}R}
@@ -55,10 +55,9 @@ improve human interactions with our environment and each other.
                      &\textbf{Sensorstar Labs} \hfill Long Island City, NY \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Design and implementation a 64-channel LED controller with audio sync 
+  \item Designed and built an audio-synchronized 64-channel LED controller 
   \item Aided in the development and testing of a virtual world conferencing application utilizing 
     OpenCV for background segmentation
-  \item On-going investigations at the intersection of new media and physical computing
   \end{compactitem} \\
 
   June 2011 - Present&\textit{Founder, Chief Stuckee} \\
@@ -67,7 +66,7 @@ improve human interactions with our environment and each other.
   \begin{compactitem}
   \item Development of a business card sized wireless field visualizer
   \item Design and functional verification of a novel power tool accessory 
-  \item Mechanical design and prototyping of custom bicycle componentry
+  \item Mechanical design and prototyping of custom cycle components
   \end{compactitem} \\
 
   Nov. 2010 - Sept. 2011&\textit{Consulting Senior Engineer}\\ 
@@ -86,20 +85,27 @@ improve human interactions with our environment and each other.
   \begin{compactitem}
   \item Evaluation and selection of mainstream-market driven high performance coprocessors 
     -- including algorithm work in C, VHDL, and CUDA
-  \end{compactitem}
+  \end{compactitem}\\
 
+  June 2006 - Sept. 2008&\textit{Junior Engineer} \\
+                        &\textbf{Sensorstar, Inc.} \hfill Elkridge, MD \\
+                        &\MPtrue 
+  \begin{compactitem}
+  \item PCB GSM Antenna, power supply, and firmware for a personal GPS tracking device
+  \item Fast data collection system for avionic inertial navigation unit incorporating video 
+  \end{compactitem}\\
 
 \end{tabular}
 
 \section*{\textbf{\textsc{Skills}}}
 \begin{tabular}{L!{\VRule}R}
   {\sl Computer Languages}& C, \CPP, Python, Bash, OpenCV, Ruby, {\LaTeX}, \textit{inter alia} as needed \\ 
-     {\sl 3D CAD}& PTC Creo (formerly Pro/ENGINEER), Alibre Design, SketchUp \\
-{\sl PCB Design }& CadSoft Eagle \\ 
- {\sl Simulation}& Ansoft HFSS, Pro/Mechanica \\ 
- {\sl Operating Systems}& Linux (Ubuntu pref.), OS X, Windows XP/7 \\
-   \textsl{Fabrication}& Welding (MIG, Stick, TIG(pref.)), Manual Machining \\ 
-  \textsl{Human Languages}& Native English, Conversational Spanish, Beginner Russian \\
+              {\sl 3D CAD}& PTC Creo (formerly Pro/ENGINEER), Alibre Design, SketchUp \\
+         {\sl PCB Design }& CadSoft Eagle \\ 
+          {\sl Simulation}& SPICE (LTSpice, Berkeley 3f5), Agilent ADS, Ansoft HFSS, Pro/Mechanica \\ 
+   {\sl Operating Systems}& Linux (Ubuntu pref.), OS X, Windows XP/7 \\
+      \textsl{Fabrication}& Welding (MIG, Stick, TIG(pref.)), Manual Machining \\ 
+  \textsl{Human Languages}& Native English, Conversational Spanish \\
 \end{tabular}
 
 
