--- a/logan_cummings_resume.tex
+++ b/logan_cummings_resume.tex
@@ -29,11 +29,11 @@
 
 \begin{document}
 
-\centerline{\Large\bf David Logan Cummings}
+\centerline{\Large\bf D. Logan Cummings}
 %\hfill {\Large\bf{David Logan Cummings}} \\
 %\vspace{1em}
 \hfill +1-443-742-6564 \\
-www.wordtothebaker.com \hfill dave@mechanart.com
+www.wordtothebaker.com \hfill logan.cummings@gmail.com
 \vspace{1em}
 \hrule height 1pt
 
@@ -49,7 +49,20 @@ www.wordtothebaker.com \hfill dave@mechanart.com
           &\textbf{Johns Hopkins University}  \hfill Baltimore, MD \\
 \end{tabular}
 
+
 \section*{\textbf{\textsc{Experience}}}
+\begin{tabular}{L!{\VRule}R}
+  Nov. 2011 - August 2013&\textit{Staff Engineer} \\ 
+                     &\textbf{Talksum, Inc.} \hfill Campbell, CA \\
+                     &\MPtrue 
+  \begin{compactitem}
+  \item Developed a custom OS targeting both x86\_64 and ARM architectures in under 150MB 
+  \item Led the migration from hosted services to an in-house datacenter 
+  \item Led the design and development of a full-system testing suite 
+  \item Wrote requirements and specifications for ~\frac{1}{3} of initial release tasks
+  \end{compactitem} \\
+
+
 \begin{tabular}{L!{\VRule}R}
   Nov. 2011 - Present&\textit{Co-Founder} \\ 
                      &\textbf{Sensorstar Labs} \hfill Long Island City, NY \\
