Updated resume lines, updated makefile...

--- a/logan_cummings_resume.tex
+++ b/logan_cummings_resume.tex
@@ -56,14 +56,12 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
                      &\textbf{Talksum, Inc.} \hfill Campbell, CA \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Developed a custom OS targeting both x86\_64 and ARM architectures in under 150MB 
-  \item Led the migration from hosted services to an in-house datacenter 
+  \item Developed a custom OS both x86\_64 and ARM targets in under 150MB 
   \item Led the design and development of a full-system testing suite 
-  \item Wrote requirements and specifications for ~\frac{1}{3} of initial release tasks
+  \item Wrote requirements and specifications for $\frac{1}{3}$ of initial release tasks
   \end{compactitem} \\
 
 
-\begin{tabular}{L!{\VRule}R}
   Nov. 2011 - Present&\textit{Co-Founder} \\ 
                      &\textbf{Sensorstar Labs} \hfill Long Island City, NY \\
                      &\MPtrue 
@@ -98,14 +96,6 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
   \begin{compactitem}
   \item Evaluation and selection of mainstream-market driven high performance coprocessors 
     -- including algorithm work in C, VHDL, and CUDA
-  \end{compactitem}\\
-
-  June 2006 - Sept. 2008&\textit{Junior Engineer} \\
-                        &\textbf{Sensorstar, Inc.} \hfill Elkridge, MD \\
-                        &\MPtrue 
-  \begin{compactitem}
-  \item PCB GSM Antenna, power supply, and firmware for a personal GPS tracking device
-  \item Fast data collection system for avionic inertial navigation unit incorporating video 
   \end{compactitem}\\
 
 \end{tabular}
