--- a/logan_cummings_resume.tex
+++ b/logan_cummings_resume.tex
@@ -56,7 +56,7 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
                      &\textbf{Talksum, Inc.} \hfill Campbell, CA \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Developed a custom OS both x86\_64 and ARM targets in under 150MB 
+  \item Developed custom OS for both x86\_64 and ARM targets in <150MB 
   \item Led the design and development of a full-system testing suite 
   \item Wrote requirements and specifications for $\frac{1}{3}$ of initial release tasks
   \end{compactitem} \\
@@ -104,9 +104,9 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
 \begin{tabular}{L!{\VRule}R}
   {\sl Computer Languages}& C, \CPP, Python, Bash, OpenCV, Ruby, {\LaTeX}, \textit{inter alia} as needed \\ 
               {\sl 3D CAD}& PTC Creo (formerly Pro/ENGINEER), Alibre Design, SketchUp \\
-         {\sl PCB Design }& CadSoft Eagle \\ 
+         {\sl PCB Design }& Altium Designer, CadSoft Eagle \\ 
           {\sl Simulation}& SPICE (LTSpice, Berkeley 3f5), Agilent ADS, Ansoft HFSS, Pro/Mechanica \\ 
-   {\sl Operating Systems}& Linux (Ubuntu pref.), OS X, Windows XP/7 \\
+   {\sl Operating Systems}& Linux (Ubuntu pref., Embedded via Buildroot), OS X, Windows XP/7 \\
       \textsl{Fabrication}& Welding (MIG, Stick, TIG(pref.)), Manual Machining \\ 
   \textsl{Human Languages}& Native English, Conversational Spanish \\
 \end{tabular}
