Updated! Fixed my dates!

--- a/logan_cummings_resume.tex
+++ b/logan_cummings_resume.tex
@@ -5,7 +5,7 @@
 \geometry{top =  0.5in}
 \usepackage{kpfonts}
 \usepackage[T1]{fontenc}
-
+\usepackage{xfrac}
 \usepackage{paralist}
 \makeatletter\let\MPtrue\@minipagetrue\makeatother
 
@@ -52,32 +52,29 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
 
 \section*{\textbf{\textsc{Experience}}}
 \begin{tabular}{L!{\VRule}R}
-  Nov. 2011 - August 2013&\textit{Staff Engineer} \\ 
+  Sept. 2013 - Present&\textit{Staff Engineer} \\ 
                      &\textbf{Talksum, Inc.} \hfill Campbell, CA \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Developed custom OS for both x86\_64 and ARM targets in <150MB 
+  \item Developed a custom embedded Linux targeting x86\_64 and ARM SoCs in 
+  under 150MB using BusyBox, crosstool-NG, and Buildroot:
+  single userspace codebase supported without modification on all platforms
+  \item Continuous integration and bug tracking via Jenkins and JIRA, integrated with 
+  internal git workflow
   \item Led the design and development of a full-system testing suite 
-  \item Wrote requirements and specifications for $\frac{1}{3}$ of initial release tasks
+  \item Wrote requirements and specifications for $\sfrac{1}{3}$ of initial release tasks
   \end{compactitem} \\
 
 
-  Nov. 2011 - Present&\textit{Co-Founder} \\ 
+  Nov. 2011 - Aug. 2013&\textit{Co-Founder} \\ 
                      &\textbf{Sensorstar Labs} \hfill Long Island City, NY \\
                      &\MPtrue 
   \begin{compactitem}
   \item Designed and built an audio-synchronized 64-channel LED controller 
+  \item Novel biometrics sensor circuit design and prototyping
+  \item Schematic capture and PCB layout for a very small wearable Bluetooth device
   \item Aided in the development and testing of a virtual world conferencing application utilizing 
     OpenCV for background segmentation
-  \end{compactitem} \\
-
-  June 2011 - Present&\textit{Founder, Chief Stuckee} \\
-                     &\textbf{Mechanart Industries, LLC} \hfill mechanart.com \\
-                     &\MPtrue 
-  \begin{compactitem}
-  \item Development of a business card sized wireless field visualizer
-  \item Design and functional verification of a novel power tool accessory 
-  \item Mechanical design and prototyping of custom cycle components
   \end{compactitem} \\
 
   Nov. 2010 - Sept. 2011&\textit{Consulting Senior Engineer}\\ 
@@ -107,7 +104,7 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
          {\sl PCB Design }& Altium Designer, CadSoft Eagle \\ 
           {\sl Simulation}& SPICE (LTSpice, Berkeley 3f5), Agilent ADS, Ansoft HFSS, Pro/Mechanica \\ 
    {\sl Operating Systems}& Linux (Ubuntu pref., Embedded via Buildroot), OS X, Windows XP/7 \\
-      \textsl{Fabrication}& Welding (MIG, Stick, TIG(pref.)), Manual Machining \\ 
+      \textsl{Fabrication}& Welding (MIG, Stick, TIG(pref.)), Machining (Bridgeport Mill, Clausing Lathes)\\ 
   \textsl{Human Languages}& Native English, Conversational Spanish \\
 \end{tabular}
 
