Updated with basic info for Airware

--- a/logan_cummings_resume.tex
+++ b/logan_cummings_resume.tex
@@ -52,15 +52,30 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
 
 \section*{\textbf{\textsc{Experience}}}
 \begin{tabular}{L!{\VRule}R}
-  Sept. 2013 - Present&\textit{Staff Engineer} \\ 
-                     &\textbf{Talksum, Inc.} \hfill Campbell, CA \\
+  Aug. 2014 - Present&\textit{Senior Hardware Engineer} \\ 
+                     &\textbf{Airware} \hfill San Francisco, CA \\
                      &\MPtrue 
+  \begin{compactitem}
+  \item Requirements gathering, schematic capture, DFM, bring-up, and DVT of small UAV avionics. 
+  \end{compactitem} \\
+
+
+
+  July 2014 - July 2015&\textit{Hardware Engineer} \\ 
+                     &\textbf{Airware} \hfill San Francisco, CA \\
+                     &\MPtrue 
+  \begin{compactitem}
+  \item Requirements gathering, schematic capture, DFM, bring-up, and DVT of small UAV avionics. 
+  \end{compactitem} \\
+
+
+  Sept. 2013 - June 2014 &\textit{Staff Engineer} \\ 
+                      &\textbf{Talksum, Inc.} \hfill Campbell, CA \\
+                      &\MPtrue 
   \begin{compactitem}
   \item Developed a custom embedded Linux targeting x86\_64 and ARM SoCs in 
   under 150MB using BusyBox, crosstool-NG, and Buildroot:
   single userspace codebase supported without modification on all platforms
-  \item Continuous integration and bug tracking via Jenkins and JIRA, integrated with 
-  internal git workflow
   \item Led the design and development of a full-system testing suite 
   \item Wrote requirements and specifications for $\sfrac{1}{3}$ of initial release tasks
   \end{compactitem} \\
@@ -100,12 +115,12 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
 \section*{\textbf{\textsc{Skills}}}
 \begin{tabular}{L!{\VRule}R}
   {\sl Computer Languages}& C, \CPP, Python, Bash, OpenCV, Ruby, {\LaTeX}, \textit{inter alia} as needed \\ 
-              {\sl 3D CAD}& PTC Creo (formerly Pro/ENGINEER), Alibre Design, SketchUp \\
+              {\sl 3D CAD}& Dassault Solidworks, PTC Creo (formerly Pro/ENGINEER), Alibre Design, SketchUp \\
          {\sl PCB Design }& Altium Designer, CadSoft Eagle \\ 
           {\sl Simulation}& SPICE (LTSpice, Berkeley 3f5), Agilent ADS, Ansoft HFSS, Pro/Mechanica \\ 
    {\sl Operating Systems}& Linux (Ubuntu pref., Embedded via Buildroot), OS X, Windows XP/7 \\
-      \textsl{Fabrication}& Welding (MIG, Stick, TIG(pref.)), Machining (Bridgeport Mill, Clausing Lathes)\\ 
-  \textsl{Human Languages}& Native English, Conversational Spanish \\
+  {\sl Fabrication}& DFM, 3D Printing, Welding (TIG(pref.), MIG, Stick), Machining (Bridgeport Mill, Clausing Lathes)\\ 
+     {\sl Human Languages}& Native English, Conversational Spanish \\
 \end{tabular}
 
 
