Updates and cleanup. Added patent app info

--- a/logan_cummings_resume.tex
+++ b/logan_cummings_resume.tex
@@ -7,6 +7,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{xfrac}
 \usepackage{paralist}
+\usepackage{hyperref}
 \makeatletter\let\MPtrue\@minipagetrue\makeatother
 
 \usepackage{array, xcolor}
@@ -56,7 +57,9 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
                      &\textbf{Airware} \hfill San Francisco, CA \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Requirements gathering, schematic capture, DFM, bring-up, and DVT of small UAV avionics. 
+  \item Owned development of a SWaP constrained aerial compute platform from requirements finalization through DVT 
+  \item FCC and CE testing of complete commercial UAV
+  \item Developed and supported production testing of all hardware components of the Aerial Information Platform
   \end{compactitem} \\
 
 
@@ -65,7 +68,8 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
                      &\textbf{Airware} \hfill San Francisco, CA \\
                      &\MPtrue 
   \begin{compactitem}
-  \item Requirements gathering, schematic capture, DFM, bring-up, and DVT of small UAV avionics. 
+    \item Schematic revision, prototyping, board bring-up and DVT for multiple small embedded sensor systems
+    \item EMI troubleshooting and mitigation for a sensitive GNSS receiver board 
   \end{compactitem} \\
 
 
@@ -114,13 +118,34 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
 
 \section*{\textbf{\textsc{Skills}}}
 \begin{tabular}{L!{\VRule}R}
+  {\sl Schematic Capture \& PCB Layout }& Altium Designer, CadSoft Eagle \\ 
   {\sl Computer Languages}& C, \CPP, Python, Bash, OpenCV, Ruby, {\LaTeX}, \textit{inter alia} as needed \\ 
-              {\sl 3D CAD}& Dassault Solidworks, PTC Creo (formerly Pro/ENGINEER), Alibre Design, SketchUp \\
-         {\sl PCB Design }& Altium Designer, CadSoft Eagle \\ 
-          {\sl Simulation}& SPICE (LTSpice, Berkeley 3f5), Agilent ADS, Ansoft HFSS, Pro/Mechanica \\ 
-   {\sl Operating Systems}& Linux (Ubuntu pref., Embedded via Buildroot), OS X, Windows XP/7 \\
-  {\sl Fabrication}& DFM, 3D Printing, Welding (TIG(pref.), MIG, Stick), Machining (Bridgeport Mill, Clausing Lathes)\\ 
+              {\sl 3D CAD}& Dassault Solidworks, PTC Creo (formerly Pro/ENGINEER) \\
+          {\sl Simulation}& SPICE (LTSpice, Berkeley 3f5), Solidworks Mechanical \\ 
+   {\sl Operating Systems}& Linux (Ubuntu pref., Embedded via Buildroot), OS X, Windows XP/7/10 \\
+  {\sl Fabrication}& DFM, 3D Printing, Welding (TIG(pref.), MIG, Stick), Machining (Manual and CNC)\\ 
      {\sl Human Languages}& Native English, Conversational Spanish \\
+\end{tabular}
+
+\section*{\textbf{\textsc{Patent Applications}}}
+\begin{tabular}{L!{\VRule}R}
+  {\sl Automotive Seating}& Montgomery, Benson, Cummings, Drubetskoy, Bonk  \\
+                          & \textit{\textbf{Oximetry Sensor Assembly and Methodology 
+for Sensing Blood Oxygen Concentration}} \\ 
+                          & US Application \# 20150297125 filed Nov. 26 2013\\
+                          \cr
+                          & Benson, Lowell, Montgomery, Dexter, Bonk, Cummings, 
+                               Haase, Baudu, Boussetta, Drubetskoy, Dacosta-Mallet \\
+                          & \textit{\textbf{Vehicle Seat with Integrated Sensors}} \\
+                          & US Application \# 20150313475 filed Nov. 25 2013
+\end{tabular}
+
+
+
+\section*{\textbf{\textsc{Links}}}
+\begin{tabular}{L!{\VRule}R}
+              {\sl Github}& http://github.com/realpsyence \\ 
+            {\sl LinkedIn}& https://www.linkedin.com/in/logan-cummings-9682ba5  \\
 \end{tabular}
 
 
