Few minor tweaks - added an 'a', an 's', removed DFM and TIG pref

--- a/logan_cummings_resume.tex
+++ b/logan_cummings_resume.tex
@@ -58,7 +58,7 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
                      &\MPtrue 
   \begin{compactitem}
   \item Owned development of a SWaP constrained aerial compute platform from requirements finalization through DVT 
-  \item FCC and CE testing of complete commercial UAV
+  \item FCC and CE testing of a complete commercial UAV
   \item Developed and supported production testing of all hardware components of the Aerial Information Platform
   \end{compactitem} \\
 
@@ -123,7 +123,7 @@ www.wordtothebaker.com \hfill logan.cummings@gmail.com
               {\sl 3D CAD}& Dassault Solidworks, PTC Creo (formerly Pro/ENGINEER) \\
           {\sl Simulation}& SPICE (LTSpice, Berkeley 3f5), Solidworks Mechanical \\ 
    {\sl Operating Systems}& Linux (Ubuntu pref., Embedded via Buildroot), OS X, Windows XP/7/10 \\
-  {\sl Fabrication}& DFM, 3D Printing, Welding (TIG(pref.), MIG, Stick), Machining (Manual and CNC)\\ 
+         {\sl Fabrication}& 3D Printing, Welding (TIG, MIG, Stick), Machining (Manual and CNC)\\ 
      {\sl Human Languages}& Native English, Conversational Spanish \\
 \end{tabular}
 
@@ -144,7 +144,7 @@ for Sensing Blood Oxygen Concentration}} \\
 
 \section*{\textbf{\textsc{Links}}}
 \begin{tabular}{L!{\VRule}R}
-              {\sl Github}& http://github.com/realpsyence \\ 
+              {\sl Github}& https://github.com/realpsyence \\ 
             {\sl LinkedIn}& https://www.linkedin.com/in/logan-cummings-9682ba5  \\
 \end{tabular}
 
